# trackobjs

./: Makefile  README.md  pyproject.toml
src/trackobjs/: __init__.py  __main__.py  _trackobjs.py
src/trackobjs/trackers/: basetrack.py  bot_sort.py  byte_tracker.py
src/trackobjs/trackers/utils/: __init__.py  files.py  gmc.py  image_process.py  kalman_filter.py  matching.py  ops.py
tests/: test_basic.py
