[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "trackobjs"
version = "0.1.0"
description = "track objects in the image sequences."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="Runiku Boa", email="bao@robot.t.u-tokyo.ac.jp"}
]
license = { text = "AGPL-3.0" }
keywords = ["tracker", "BoT-SORT", "python"]
dependencies = [
    "numpy",
    "torch",
    "opencv-python"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "pre-commit>=3.7"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.scripts]
trackobjs = "trackobjs:__main__.main"
